# fLZc_python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
C/: .LZ76c.d-e  .LZ76c_benchmark.d-e  .LZ76c_test.d-e  .LZ78c.d-e  .LZ78c_benchmark.d-e  .LZ78c_test.d-e  .mt64.d-e  .utils.d-e
fLZc_python/: README.md  __init__.py  liblzc.dylib
fLZc_python/core/: LZ76c.c  LZ76c.h  LZ78c.c  utils.c  utils.h
fLZc_python/examples/: lzc_demo.py
fLZc_python/python_wrapper/: LZc_binarise.py  LZc_normfac.py  flzc.py
tests/: test_demo.py  test_flzc.py
