[build-system]
requires = [
  "scikit-build-core>=0.10.0,<1.0.0",
  "cmake>=3.15",
  "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "fLZc"
version = "0.1.5"
description = "Python wrapper for fLZc complexity measure (based on https://github.com/lcbarnett/fLZc)"
readme = "fLZc_python/README.md"
requires-python = ">=3.8"
authors = [
{ name = "Romy Beaute & Lionel Barnett", email = "r.beaut@sussex.ac.uk" }
]
license = { text = "MIT" }
dependencies = ["numpy"]

[tool.scikit-build]
wheel.packages = ["fLZc_python"]
